--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
                     loadingIndicator.style.display = 'block';
                     
                     // Send to the primary endpoint
-                    const response = await fetch('https://submit-form.com/0UqjYGdKj', {
+                    const response = await fetch('https://submit-form.com/OlpHJnVlg', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
